--- a/art_draft_20180216.md
+++ b/art_draft_20180216.md
@@ -1,5 +1,5 @@
 
-# _Цепляющее название_
+# _CI/CD для бедных или переход на примере одного проекта на Урале_
 *Действующие лица (**Команда**)*: разработчиков - 2 человека, админ - 1 человек.
 
 > Статья повествует об использовании таких технологий, как Ansible, Docker Swarm, Jenkins и Portainer для реализации CI/CD-пайплайна с возможность контроля за ним с помощью красивого веб-интерфейса
@@ -80,10 +80,10 @@ Inventory можно описывать в формате ini или yaml. В д
 #_ Группа all существует всегда
 all:
   hosts:
-	#	имя хоста удаленной системы,  к которому будет подключаться Ansible
+    #	имя хоста удаленной системы,  к которому будет подключаться Ansible
     some-cool-vm-host.regions.alfaintra.net
   vars:
-	#	имя пользователя, кем будет авторизоваться
+    #	имя пользователя, кем будет авторизоваться
     ansible_user: 'root'
     # очень плохо такое делать, но тут записан пароль открытым текстом :-(
     ansible_password: '12345678'
