--- a/art_draft_20180216.md
+++ b/art_draft_20180216.md
@@ -1,5 +1,5 @@
 
-# _CI/CD для бедных или переход на примере одного проекта на Урале_
+# _CI/CD для бедных или DevOps-подход на  примере одного проекта на Урале_
 *Действующие лица (**Команда**)*: разработчиков - 2 человека, админ - 1 человек.
 
 > Статья повествует об использовании таких технологий, как Ansible, Docker Swarm, Jenkins и Portainer для реализации CI/CD-пайплайна с возможность контроля за ним с помощью красивого веб-интерфейса
