--- a/art_draft_20180216.md
+++ b/art_draft_20180216.md
@@ -5,11 +5,11 @@
 > Статья повествует об использовании таких технологий, как Ansible, Docker Swarm, Jenkins и Portainer для реализации CI/CD-пайплайна с возможность контроля за ним с помощью красивого веб-интерфейса
 
 Чего обычно хочет _разработчик_ ? Он хочет творить, не думая о деньгах, и максимально быстро видеть результаты собственного творчества.
-С другой стороны _бизнес_, который хочет денег, да побольше и поэтому постоянно думает о снижении *T2M*. Другими словами, _бизнес_ мечтает об ускорении вывода *MVP* (a.k.a. Minimum Valuable Product) новых продуктов  и обновлении существующих продуктов на рынке.
+С другой стороны _бизнес_, который хочет денег, да побольше и поэтому постоянно думает о снижении *T2M*. Другими словами, _бизнес_ мечтает об ускорении вывода _MVP_ (a.k.a. Minimum Valuable Product) новых продуктов  и обновлении существующих продуктов на рынке.
 Ну, а чего же хочет _админ_? А _админ_ - человек простой, он хочет играть в ~~Кваку~~ Танки и чтобы его пореже дергали _разработчики_ и _бизнес_. 
-Поскольку для реализации желаний админа, как показывает правда жизни, его силами должны реализоваться и мечты других героев, представители ИТ-тусовки много работали над этим. Часто получалось достичь желаемого, придерживаясь методологии *DevOps* и реализуя принципы *CI/CD* (***C**ontinuous **I**ntegration and **D**elivery*).
+Поскольку для реализации желаний админа, как показывает правда жизни, его силами должны реализоваться и мечты других героев, представители ИТ-тусовки много работали над этим. Часто получалось достичь желаемого, придерживаясь методологии _DevOps_ и реализуя принципы _CI/CD_ (***C**ontinuous **I**ntegration and **D**elivery*).
 
-Так получилось и в проекте по разработке новой версии Системы Мониторинга Банкоматов (СМБ) Банка, в которой удалось в весьма сжатые сроки реализовать полный *пайплайн* от публикации изменений исходников в системе контроля версия разработчиком до автоматического перезапуска приложения в тестовой среде.
+Так получилось и одном новом перспективном проекте в Уральской Дирекции ИТ, в которой удалось в весьма сжатые сроки реализовать полный _пайплайн_ от публикации изменений исходников в системе контроля версия разработчиком до автоматического перезапуска приложения в тестовой среде.
 
 ## Часть 0. Команда
 * Разработчики проекта (Dev):
@@ -22,12 +22,12 @@
 После некоторых обсуждения, командой была выбрана следующая двухуровневая архитектура:
 * Бекэнд-часть на Java, реализованный на активно-развивающемся фреймворке Spring-Boot, общающаяся с различными БД и другими корпоративными системами  (потому, что легко, быстро и понятно писать)
 * Фронтэнд-часть на NodeJS (и ReactJS - интерфейс в браузере), потому что _очень-очень быстро_ работает.
-* 
+
 В свою очередь к этим компонентам был добавлен еще NGINX-сервер, являющийся фронтэндом для NodeJS-приложения. Его роль заключалась в распределении запросов между самим приложением и другими инфраструктурными компонентами системы, речь о которых пойдет ниже.
 
 ### Чего хотелось команде
 
-Как только новому проекту был дан "зеленый свет" со стороны руководства (спасибо, [@Максим](http://alfa/) и [@Артем](http://alfa/)!), появилась первая техническая задача, а именно, подготовка "оборудования" для запуска нового проекта. Поскольку всем участникам было очевидно, что без максимальной оперативности "*выкатки*" новых версий на серверы развитие проекта будет весьма непростым, сразу же было решено идти по пути полного *CI/CD*, т.е. хотелось достичь следующего *пайплайн*-а:
+Как только новому проекту был дан "зеленый свет", появилась первая техническая задача, а именно, подготовка "оборудования" для запуска нового проекта. Поскольку всем участникам было очевидно, что без максимальной оперативности "*выкатки*" новых версий на серверы развитие проекта будет весьма непростым, сразу же было решено идти по пути полного *CI/CD*, т.е. хотелось достичь следующего *пайплайн*-а:
 * Разработчик публикует изменения ("коммит") в систему контроля версий ("гит"),
 * ГИТ проводит минимально необходимое тестирование содержимого коммита на наличие необходимо атрибутики (например, правильный формат commit message), соответствие стилю оформления Банка и другой бюрократии,
 * гит-сервер посредством механизма *web-hook*-ов дергает сервер непрерывной интеграции Jenkins, 
@@ -89,29 +89,7 @@ all:
     ansible_password: '12345678'
 
     # Это сертификат банковского СА
-    ab_ca_crt: "
- -----BEGIN CERTIFICATE-----
- MIIDjjCCAnagAwIBAgIQCYntz/Qul7NBrKAW+kYkqTANBgkqhkiG9w0BAQsFADBG
- MQswCQYDVQQGEwJSVTEWMBQGA1UEChMNSlNDIEFsZmEtQmFuazEfMB0GA1UEAxMW
- QWxmYS1CYW5rIFJvb3QgQ0EgMjAxMjAeFw0xNzA1MjMwMzQ2MDJaFw0yNzA1MjMw
- MzU2MDJaMEYxCzAJBgNVBAYTAlJVMRYwFAYDVQQKEw1KU0MgQWxmYS1CYW5rMR8w
- HQYDVQQDExZBbGZhLUJhbmsgUm9vdCBDQSAyMDEyMIIBIjANBgkqhkiG9w0BAQEF
- AAOCAQ8AMIIBCgKCAQEAoK3YwlcKAM7gdGQotZ3iEIzbEwdjm+0dSYPnxMRlocop
- pCN7esvBA7JgaLjZvdV0j6kHbjVcC3N9ase2gaXuqRTExmGoO9N/vBwo7U+1SJ0Q
- K7vqgnipjB9AUAarJr4xtrnEH8UWZGToLk5A2Lj2mKvounyTTb/juFG/YkJ4rhQ3
- qLJOOtvpIFPWw3kUyOQYg39KcR3fzqJXTFzYNZ2kF9Pi2bFAdMfiiswELhyZnfMA
- aexz4bikEhbI39FTHUTrK/wSKu6xpAml1DYA4uuFolaWvgbK2D60gHazBIWVBEN4
- aC7vX87m6ekmlLjNwTXqnelZchx/x/7nPngzl6AJVwIDAQABo3gwdjALBgNVHQ8E
- BAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUztTnO2tAFpxet22/Jx+r
- Uyi2aVgwEgYJKwYBBAGCNxUBBAUCAwEAATAjBgkrBgEEAYI3FQIEFgQUr5dF2u0K
- zzkBCrCNjnUi4j88xUAwDQYJKoZIhvcNAQELBQADggEBAJATy6SVDxtNoJri+BLB
- A+g8wtZRKx4PuLG9gUmmD7+M8Sw8HYiv8dxHfc8VBXLTzuh5a7X6N+71RWL67Lbv
- AFvTRT1iqdBeSKMdiB13kQUlrXrv2O/VxnMz0XonKj7sq+MfDm4A+dhB0xuAPluB
- n/I7JOdmaMY2YZmp7EmM9FsdjIAfOgvoSTPdg9JExkILAKkinry2cRIhUGKfqAHt
- QgvxzhOOX/upISkv4PwNOkVt3LAw/znPG+ppvqIJgOoYOMmK0VtEx2AGTTKgjrEK
- odnYB88D/Tm5YVrvjFrqGyhRYzrxEDtIfL/Fv66orFUOQCBGnqHe+HLk5s519Vpc
- gR0=
- -----END CERTIFICATE-----"
+    ab_ca_crt: "-----BEGIN CERTIFICATE----- ... -----END CERTIFICATE-----"
 ~~~~~
 Для впервые столкнувшихся с форматом yaml хотелось бы отметить, что все отступы в данном формате необходимо оформлять **СТРОГО** с помощью **ПРОБЕЛАМИ**.
 
