--- a/art_draft_20180216.md
+++ b/art_draft_20180216.md
@@ -12,7 +12,7 @@
 
 Поскольку для реализации желаний админа, как показывает правда жизни, его силами должны реализоваться и мечты других героев, представители ИТ-тусовки много работали над этим. Часто получалось достичь желаемого, придерживаясь методологии _DevOps_ и реализуя принципы _CI/CD_ (***C**ontinuous **I**ntegration and **D**elivery*).
 
-Так получилось и одном новом перспективном проекте в Уральской Дирекции ИТ, в которой удалось в весьма сжатые сроки реализовать полный _пайплайн_ от публикации изменений исходников в системе контроля версия разработчиком до автоматического перезапуска приложения в тестовой среде.
+Так получилось в одном новом перспективном проекте в Уральской Дирекции ИТ, в которой удалось в весьма сжатые сроки реализовать полный _пайплайн_ от публикации изменений исходников в системе контроля версия разработчиком до автоматического перезапуска приложения в тестовой среде.
 
 ## Часть 0. Команда
 * Разработчики проекта (Dev):
