--- a/art_draft_20180216.md
+++ b/art_draft_20180216.md
@@ -1,8 +1,14 @@
 
-# _CI/CD для бедных или DevOps-подход на  примере одного проекта на Урале_
+# _Универсальный pipeline на примере одного проекта_
 *Действующие лица (**Команда**)*: разработчиков - 2 человека, админ - 1 человек.
 
 > Статья повествует об использовании таких технологий, как Ansible, Docker Swarm, Jenkins и Portainer для реализации CI/CD-пайплайна с возможность контроля за ним с помощью красивого веб-интерфейса
+
+Оглавление:
+1
+2
+3
+
 
 Чего обычно хочет _разработчик_ ? Он хочет творить, не думая о деньгах, и максимально быстро видеть результаты собственного творчества.
 
